<resources>

    <string name="app_name">Decisong</string>
    <string name="example">Example</string>
    <string name="example_round">Round 1</string>
    <string name="btn_instructions">How To Play</string>
    <string name="btn_new_game">New Game</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_done">Start Game</string>
    <string name="autocomplete_hint">Type to add players&#8230;</string>
    <string name="player">Current Player</string>
    <string name="timer">Time Left:</string>
    <string name="loading">Loading&#8230;</string>
    <string name="now_playing">Playing: %1$s from %2$s by %3$s</string>
    <string name="no_more_tracks">Heavy rotation depleted&#8230; why not go install the Rdio app now?</string>
    <string name="connectivity_dialog_title">Not Connected</string>
    <string name="connectivity_dialog_text">Please turn on your wireless connection.</string>
    <string name="connectivity_dialog_exit">Exit</string>
    <string name="connectivity_dialog_settings">Settings</string>
    <string name="instruction_one">1. Start a new game and enter names of players.</string>
    <string name="instruction_two">2. Each player takes turn guessing the artist of current song playing.</string>
    <string name="instruction_three">3. You get points according to how fast you guessed correctly.</string>
    <string name="instruction_four">4. But no points if you guessed wrongly or time\'s up.</string>
    <string name="instruction_five">5. Winner gets to decide where to eat!</string>

</resources>