<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/decisong_game"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/current_round"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/example_round"
        android:textColor="@color/decisong_light_again"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/current_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/example"
        android:textColor="@color/decisong_light_again"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/timer"
        android:textColor="@color/decisong_light_again"
        android:textSize="28sp" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100" />

</LinearLayout>